fix game search form on mobile

--- a/src/assets/scss/components/_game.scss
+++ b/src/assets/scss/components/_game.scss
@@ -122,8 +122,19 @@ app-game-item {
   }
 }
 
+.game-list-form {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0; right: 0
+}
+
 @include media-breakpoint-down(md) {
   app-game-item {
     width: 50% !important;
+  }
+
+  .game-list-form {
+    position: initial;
   }
 }
